--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,41 @@
+.weather-app {
+    max-width: 600px;
+    margin: 30px auto;
+    padding: 20px;
+    border: 1px solid #dadde1;
+    border-radius: 15px;
+}
+
 h1 {
-    color: Blue;
+    text-align: right;
+    font-family: 'Saira Extra Condensed', sans-serif;
+    font-weight: lighter;
+
+}
+
+h2 {
+    color: rgb(32, 33, 36);
+    display:block;
+    font-family: 'Saira Extra Condensed', sans-serif;
+    font-size: 30px;
+    font-weight: 400;
+    height: 26px;
+    line-height: 26px;
+    width: 326px;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    color: rgb(112, 117, 122);
+    font-family: 'Saira Extra Condensed', sans-serif;
+    font-size: 25px;
+    font-weight: 100;
+    list-style: none;
+    line-height: 19px;
+    margin: 0;
+    padding: 0;
 }
