--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,3 @@
-.weather-app {
-    max-width: 600px;
-    margin: 30px auto;
-    padding: 20px;
-    border: 1px solid #dadde1;
-    border-radius: 15px;
-}
-
 h1 {
     text-align: right;
     font-family: 'Saira Extra Condensed', sans-serif;
@@ -38,4 +30,36 @@ li {
     line-height: 19px;
     margin: 0;
     padding: 0;
+}
+.weather-app-wrapper {
+    max-width: 600px;
+    margin: 30px auto;
+}
+.weather-app {
+    padding: 20px;
+    border: 1px solid #dadde1;
+    border-radius: 15px;
+}
+
+.overview {
+    margin-bottom: 20px;
+}
+
+.weather-temperature img {
+    margin-right: 10px;
+    float: left;
+    height: 64px;
+    width: 64px;
+}
+.weather-temperature strong {
+    color: rgb(33, 33, 33);
+    font-size: 64px;
+    line-height: 1;
+    font-weight: 400;
+}
+
+.weather-temperature .units {
+    position: relative;
+    font-size: 16px;
+    top: -32px;
 }
