working on the temperature in js

--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@ li {
     line-height: 19px;
     margin: 0;
     padding: 0;
+    text-transform: capitalize;
 }
 .weather-app-wrapper {
     max-width: 600px;
